@@ -37,12 +37,19 @@ LIBRPMDB_0
     headerFini;
     headerFree;
     headerGet;
+    headerGetDigest;
+    headerSetDigest;
     headerGetInstance;
+    headerSetInstance;
     headerGetMagic;
     headerGetOrigin;
+    headerSetOrigin;
     headerGetEndOff;
+    headerSetEndOff;
     headerGetStartOff;
+    headerSetStartOff;
     headerGetStatbuf;
+    headerSetStatbuf;
     headerInit;
     headerIsEntry;
     headerLink;
